<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="help">Help</string>
    <string name="draw">Draw</string>
    <string name="white_won">White won</string>
    <string name="black_won">Black won</string>
    <string name="confirm_quit_game">Do you really want to quit the game?</string>
    <string name="promote_piece">Promote piece?</string>
    <string name="do_not_promote">Do not promote</string>
    <string name="promote">Promote</string>
    <string name="app_name">Shogi with Bonanza</string>
    <string name="new_game">New Game</string>
    <string name="preferences">Preferences</string>
    <string name="player_types">Players</string>
    <string name="computer_difficulty">Computer Difficulty</string>
    <string name="reset_preferences">Reset Preferences</string>
    <string name="flip_screen">Flip screen</string>
    <string name="quit_game">Quit Game</string>
    <string name="start_game">Start</string>    
    <string name="undo">Undo</string>
    <string name="undo_operation">Undo</string>
    <string name="undo_disallowed">Undo (disallowed)</string>
    <string name="undos_remaining">Undo (%d remaining)</string>
    <string name="max_undos">Allow Undo</string>
    <string name="piece_style">Piece Style</string>
    <string name="handicap">Handicap</string>
    <string name="resume_play">Replay saved game</string>
    <string name="reload">Reload</string>
    <string name="game_logs">Game Logs</string>
    <string name="visit_optus">Visit DB</string>
    <string name="replay_game">Replay game</string>
    <string name="log_properties">Properties</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_date_reversed">Sort by date reversed</string>
    <string name="sort_by_black_player">Sort by black player</string>
    <string name="sort_by_white_player">Sort by white player</string>        
    <string name="sort_by_player">Sort by player names</string>        
    <string name="sort_by_number_of_games">Sort by number of games</string>
    <string name="sort_by_opening_moves">Sort by opening moves</string>
    <string name="sort_by_tournament">Sort by tournaments</string>
    <string name="game_log_properties">Log information</string>        
    <string name="date">Date</string>
    <string name="save_in_sdcard">Save in storage</string>
    <string name="game_log_dir">Game log save directory</string>
    <string name="saved_game_log_in_memory">Saved game log in memory</string>
    <string name="file">File</string>
    <string name="delete_log">Delete log</string>
    <string name="saved_log_in_sdcard">Saved in %s</string>
    <string name="deleted_log_in_memory">Deleted log in memory</string>
    <string name="deleted_log_in_sdcard">Deleted %s</string>
    <string name="restored_log">Restored log</string>
    <string name="num_plays">Plays</string>
    <string name="plays_suffix"> plays</string>
    <string name="attr_title">Title</string>
    <string name="attr_location">Location</string>
    <string name="attr_time_limit">Time limit</string>
    <string name="attr_tournament">Tournament</string>
    <string name="attr_black_player">Black player</string>
    <string name="attr_white_player">White player</string>
    <string name="log_save_format">Log file format</string>
    <string name="human_player_name">Player name</string>
    <string name="default_human_player_name">Human</string>
    <string name="fetching_game_log">Fetching game log</string>
    <string name="tournament">Tournament</string>
    <string name="player">Player</string>
    <string name="date_range">Date range</string>
    <string name="upper_bound">Max</string>
    <string name="lower_bound">Min</string>
    <string name="change">Change</string>
    <string name="opening_moves">Opening moves</string>
    <string name="search">Search</string>
    <string name="unspecified">(Unspecified)</string>
    <string name="player_list">Player list</string>
    <string name="query_result">Query result</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="engine_data_download">Download Data</string>
    <string name="options">Options</string>
    <string name="darken_black">Darken black pieces</string>
    <string name="download_message">To play, you need to download Bonanza engine data.
        This is a 30mb compressed download, which will take up 180mb on your device.</string>
    <string name="cores">Maximum number of CPU cores to use</string>
    <string name="fatal_error">Error</string>
    <string name="board_style">Board Style</string>
    <string name="fuzzy">Fuzzy touch recognition</string>
    <string name="animate">Animate computer moves</string>
    <string name="delete_all">Delete all in-memory</string>
    <string name="delete_old">Delete two-week-old in-memory"</string>
    <string name="remove_check">Confirmation</string>
    <string name="remove_check_message">Remove all in-memory logs?</string>
    <string name="yes_no_save">OK and don\'t save</string>
    <string name="log_end">View logged games starting at end</string>
    <string name="reset_time">Reset times</string>
    <string name="auto_log">Automatically save to log at end of game</string>
    <string name="log_now">Save to log</string>
</resources>
