<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

  <mobi.omegacentauri.shogi.SplashView
      android:id="@+id/splashview"
      android:layout_width="fill_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:layout_gravity="top|fill_vertical|center_horizontal"
      />

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:baselineAligned="false"
      android:orientation="horizontal" >

  <Button
      android:id="@+id/data_download_button"
      android:layout_width="0dp"
      android:layout_height="55sp"
      android:layout_weight="1"
      android:text="@string/engine_data_download" />

    <Button
        android:id="@+id/new_game_button"
        android:layout_width="0dp"
        android:layout_height="55sp"
        android:layout_weight="1"
        android:visibility="gone"
        android:text="@string/new_game" />

    <Button
      android:id="@+id/pick_log_button"
      android:layout_width="0dp"
        android:layout_height="55sp"
      android:layout_weight="1"
      android:text="@string/game_logs" />

  <Button
      android:id="@+id/options_button"
      android:layout_width="0dp"
      android:layout_height="55sp"
      android:layout_weight="1"
      android:text="@string/options" />

    <Button
        android:id="@+id/help_button"
        android:layout_width="0dp"
        android:layout_height="55sp"
        android:layout_weight="1"
        android:text="@string/help" />
  </LinearLayout>

  <TextView
      android:id="@+id/download_message"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textSize = "14sp"
      android:layout_weight="0"
      android:visibility="gone"
      android:text = "@string/download_message"
      />
</LinearLayout>
